--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@glidejs/glide": "^3.6.2",
     "@nextui-org/react": "^2.4.6",
+    "aos": "^2.3.4",
     "framer-motion": "^11.5.4",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
